--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2004-12-09  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* aws-net-std.ads, aws-net.ads:
+	(Errno): Add spec.
+
 2004-11-18  Pascal Obry  <pascal@obry.org>
 
 	* templates_parser.adb:
