--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -6,6 +6,15 @@
 	* aws-net-generic_sets.ads, aws-net-generic_sets.adb:
 	(Set_Mode): New routine.
 
+	* aws-utils.ads:
+	(Null_Record): New type.
+
+	* aws-net-sets.adb:
+	Removed.
+
+	* aws-net-sets.ads:
+	Instantiated from AWS.Net.Generic_Sets.
+
 2004-11-18  Pascal Obry  <pascal@obry.org>
 
 	* templates_parser.adb:
