--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,11 @@
+2004-12-10  Pascal Obry  <pascal@obry.net>
+
+	* aws-utils.ads:
+	(Null_Record): Edit comment.
+
+	* aws-net.ads:
+	Minor reformatting.
+
 2004-12-09  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* aws-net-std.ads, aws-net.ads:
