--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2004-12-17  Pascal Obry  <pascal@obry.org>
+
+	* templates_parser.adb:
+	Minor optimization.
+
 2004-12-15  Pascal Obry  <pascal@obry.net>
 
 	* templates_parser-print_tree.adb:
