--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,9 +1,12 @@
 2004-12-23  Pascal Obry  <pascal@obry.net>
 
+	* aws-services-callbacks.ads, aws-services-callbacks.adb:
+	Initial revision.
+
 	* aws-server.adb, aws-server-protocol_handler.adb:
 	(Protocol_Handler): Revert previous change. It is not needed to
 	 have an access type here as the HTTP record as an auto-pointer.
-	
+
 2004-12-23  Pascal Obry  <pascal@obry.net>
 
 	* aws-server-protocol_handler.adb:
