--- a/demos/ChangeLog
+++ b/demos/ChangeLog
@@ -1,3 +1,8 @@
+2004-12-23  Pascal Obry  <pascal@obry.org>
+
+	* web_elements.adb:
+	Use new AWS.Services.Callbacks services to build the aliases.
+
 2004-12-22  Pascal Obry  <pascal@obry.org>
 
 	* web_elements.adb:
