--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,4 +1,4 @@
-2005-01-17  Pascal Obry  <pascal@obry.org>
+2005-01-17  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* aws-status.ads, aws-status.adb:
 	(Authorization_URI): New routine.
