--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2005-01-18  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* aws-status.ads:
+	(Authorization_Name): Fix authorization field name in comment.
+
 2005-01-17  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* aws-status.ads, aws-status.adb:
