--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2005-01-20  Pascal Obry  <pascal@obry.org>
+
+	* aws-status.ads:
+	(Authorization_Password): Update comments.
+
 2005-01-19  Pascal Obry  <pascal@obry.org>
 
 	* aws-status.ads:
