Change my email.

--- a/AUTHORS
+++ b/AUTHORS
@@ -8,6 +8,6 @@ has matured to a complete Web development framework.
 
 AWS is mainly the work of two developers over this period.
 
-Dmitriy Anisimkov	anisimkov@yahoo.com
+Dmitriy Anisimkov	anisimkov@ada-ru.org
 
 Pascal Obry		pascal@obry.org
