--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,14 @@
+2005-01-29  Pascal Obry  <pascal@obry.org>
+
+	* aws-server.adb:
+	(Accept_Socket_Serialized): If server is in shutdown mode raise
+	 Socket_Error. This will terminate the lines and is needed for new
+	 shutdown scheme.
+	(Shutdown): Make sure the the server socket is not waiting for a
+	 connection (Wait_For using poll) as this will lock on some
+	 platforms like AIX. Add comments about the new shutdown scheme.
+	Fixes E128-004.
+
 2005-01-25  Pascal Obry  <pascal@obry.org>
 
 	* aws-status.ads:
