--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,3 +1,10 @@
+2005-02-01  Pascal Obry  <pascal@obry.org>
+
+	* memory_streams.adb:
+	(Append): Delay Block_Length computation at the point it is valid
+	 to compute it. A constraint error was raised when compiled with
+	 -gnatVaM.
+
 2004-11-13  Pascal Obry  <pascal@obry.org>
 
 	* makefile:
