--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,3 +1,8 @@
+2005-02-05  Pascal Obry  <pascal@obry.org>
+
+	* memory_streams.adb:
+	Update copyright notice.
+
 2005-02-01  Pascal Obry  <pascal@obry.org>
 
 	* memory_streams.adb:
