--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2005-02-05  Pascal Obry  <pascal@obry.org>
+
+	* aws-server.adb:
+	Update copyright notice.
+
 2005-01-29  Pascal Obry  <pascal@obry.org>
 
 	* aws-server.adb:
