--- a/config/ChangeLog
+++ b/config/ChangeLog
@@ -1,3 +1,8 @@
+2005-02-05  Pascal Obry  <pascal@obry.org>
+
+	* src/check_config.c:
+	Include <sys/filio.h> on Solaris.
+
 2004-12-09  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* aws-net-std__adasockets.adb, aws-net-std__gnat.adb,
