--- a/docs/TODO
+++ b/docs/TODO
@@ -182,9 +182,12 @@ implemented:
   the table content by adding a conditional for all tag variable inside the
   table. This is a kind of an expander pass.
 
-- Add a way to have structured (as record) templates varibles. It will be
+- Add a way to have structured (as record) templates variables. It will be
   easier and cleaner than to have multiple variables that must be
   synchronized. This needs some more design as it is a tricky issue.
+
+
+=============== Point to fix/implement/review before next release (2.2)
 
 - Check that AWS builds fine with GNAT 3.4.3 on Windows with SOAP support. It
   fails with Mingw32 GNAT 3.4.2.
@@ -192,4 +195,6 @@ implemented:
 
 - Analyse and fix regression found on FreeBSD GCC 3.4.3.
 
-=============== Point to fix/implement/review before next release (2.1)
+- AWS should not depends on IPv6 (should be an option).
+
+- Use GNAT.MD5 instead of include/md5.
