--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,3 +1,10 @@
+2005-02-16  Pascal Obry  <pascal@obry.org>
+
+	* makefile:
+	(../src/aws-os_lib.adb): Target removed, not needed.
+	(build): Do not depend on ../src/aws-os_lib.adb.
+	Clean-up of the build procedure.
+
 2005-02-05  Pascal Obry  <pascal@obry.org>
 
 	* memory_streams.adb:
