--- a/config/projects/ChangeLog
+++ b/config/projects/ChangeLog
@@ -1,3 +1,12 @@
+2005-02-23  Pascal Obry  <obry@adacore.com>
+
+	* shared.gpr:
+	Initial revision.
+
+	* aws.gpr, aws_ssl.gpr:
+	Import new shared project.
+	Update copyright notice.
+
 2004-11-13  Pascal Obry  <pascal@obry.org>
 
 	* ai302.gpr:
